--- a/pom.xml
+++ b/pom.xml
@@ -11,26 +11,27 @@
 		<maven.compiler.target>21</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<slf4j.version>2.0.12</slf4j.version>
-		<log4j.version>2.23.1</log4j.version>
+		<!-- External -->
+		<slf4j.version>2.0.16</slf4j.version>
+		<log4j.version>2.24.1</log4j.version>
 		<InMemoryJavaCompiler.version>1.3.0</InMemoryJavaCompiler.version>
-		<gson.version>2.10.1</gson.version>
+		<gson.version>2.11.0</gson.version>
 		<owner.version>1.0.12</owner.version>
-		<jda.version>5.0.0-beta.22</jda.version>
+		<jda.version>5.1.2</jda.version>
 		<!-- L2J -->
-		<l2j-server-commons.version>2.6.7.1</l2j-server-commons.version>
+		<l2j-server-commons.version>2.6.8.0</l2j-server-commons.version>
 		<l2j-server-geo-driver.version>2.6.5.0</l2j-server-geo-driver.version>
 		<!-- Test -->
-		<junit-jupiter.version>5.10.2</junit-jupiter.version>
-		<mockito.version>5.11.0</mockito.version>
-		<mockito-inline.version>5.2.0</mockito-inline.version>
-		<assertj-core.version>3.25.3</assertj-core.version>
+		<junit-jupiter.version>5.11.3</junit-jupiter.version>
+		<mockito.version>5.14.2</mockito.version>
+		<assertj-core.version>3.26.3</assertj-core.version>
 		<!-- Plugins -->
-		<dependency-check-maven.version>9.1.0</dependency-check-maven.version>
+		<dependency-check-maven.level>8</dependency-check-maven.level>
+		<dependency-check-maven.version>10.0.4</dependency-check-maven.version>
 		<maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
 		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
-		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+		<maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
+		<maven-surefire-plugin.version>3.5.1</maven-surefire-plugin.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -46,7 +47,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin.version}</version>
 				<configuration>
-					<argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+					<argLine>-Xshare:off -javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -129,6 +130,12 @@
 			<groupId>net.dv8tion</groupId>
 			<artifactId>JDA</artifactId>
 			<version>${jda.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.protobuf</groupId>
+					<artifactId>protobuf-java</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- L2J -->
 		<dependency>
@@ -167,12 +174,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-inline</artifactId>
-			<version>${mockito-inline.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 			<version>${assertj-core.version}</version>
@@ -189,7 +190,7 @@
 						<artifactId>dependency-check-maven</artifactId>
 						<version>${dependency-check-maven.version}</version>
 						<configuration>
-							<failBuildOnCVSS>8</failBuildOnCVSS>
+							<failBuildOnCVSS>${dependency-check-maven.level}</failBuildOnCVSS>
 							<assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
 							<nvdApiKey>${env.NVD_API_KEY}</nvdApiKey>
 						</configuration>
