--- a/src/main/resources/config/grandboss.properties
+++ b/src/main/resources/config/grandboss.properties
@@ -3,12 +3,15 @@
 # ---------------------------------------------------------------------------
 
 # Delay of appearance time of Antharas. Value is minute. Range 3-60
+# Default: 20
 AntharasWaitTime = 20
 
 # Interval time of Antharas. Value is hour. Range 1-480
+# Default: 264
 IntervalOfAntharasSpawn = 264
 
 # Random interval. Range 1-192
+# Default: 72
 RandomOfAntharasSpawn = 72
 
 # ---------------------------------------------------------------------------
@@ -16,12 +19,15 @@ RandomOfAntharasSpawn = 72
 # ---------------------------------------------------------------------------
 
 # Delay of appearance time of Valakas. Value is minute. Range 3-60
+# Default: 30
 ValakasWaitTime = 30
 
 # Interval time of Valakas. Value is hour. Range 1-480
+# Default: 264
 IntervalOfValakasSpawn = 264
 
 # Random interval. Range 1-192
+# Default: 72
 RandomOfValakasSpawn = 72
 
 # ---------------------------------------------------------------------------
@@ -29,9 +35,11 @@ RandomOfValakasSpawn = 72
 # ---------------------------------------------------------------------------
 
 # Interval time of Baium. Value is hour. Range 1-480
+# Default: 168
 IntervalOfBaiumSpawn = 168
 
 # Random interval. Range 1-192
+# Default: 48
 RandomOfBaiumSpawn = 48
 
 # ---------------------------------------------------------------------------
@@ -39,9 +47,11 @@ RandomOfBaiumSpawn = 48
 # ---------------------------------------------------------------------------
 
 # Interval time of Core. Value is hour. Range 1-480
+# Default: 60
 IntervalOfCoreSpawn = 60
 
 # Random interval. Range 1-192
+# Default: 24
 RandomOfCoreSpawn = 24
 
 # ---------------------------------------------------------------------------
@@ -49,9 +59,11 @@ RandomOfCoreSpawn = 24
 # ---------------------------------------------------------------------------
 
 # Interval time of Orfen. Value is hour. Range 1-480
+# Default: 48
 IntervalOfOrfenSpawn = 48
 
 # Random interval. Range 1-192
+# Default: 20
 RandomOfOrfenSpawn = 20
 
 # ---------------------------------------------------------------------------
@@ -59,9 +71,11 @@ RandomOfOrfenSpawn = 20
 # ---------------------------------------------------------------------------
 
 # Interval time of QueenAnt. Value is hour. Range 1-480
+# Default: 36
 IntervalOfQueenAntSpawn = 36
 
 # Random interval. Range 1-192
+# Default: 17
 RandomOfQueenAntSpawn = 17
 
 # ---------------------------------------------------------------------------
@@ -69,12 +83,15 @@ RandomOfQueenAntSpawn = 17
 # ---------------------------------------------------------------------------
 
 # Interval time of Beleth. Value is hour. Range 1-480. Retail: 192
+# Default: 192
 IntervalOfBelethSpawn = 192
 
-# Random interval. Range 1-192. Retail: 148
+# Random interval. Range 1-192.
+# Default: 148
 RandomOfBelethSpawn = 148
 
 #Minimal count of players for enter to Beleth. Retail: 36
+# Default: 36
 BelethMinPlayers = 36
 
 # ---------------------------------------------------------------------------
