Added support for XP Voiced Handler

--- a/src/main/resources/config/customs.properties
+++ b/src/main/resources/config/customs.properties
@@ -425,3 +425,11 @@ AllowClanHandler = False
 # When enabled, players can view the statistics of other players for the current event.
 # Default value: False
 AllowStatHandler = False
+
+# ---------------------------------------------------------------------------
+# XP Voiced Handlers
+# ---------------------------------------------------------------------------
+
+# When enabled, players can choose to stop gaining experience points (XP).
+# Default: False
+AllowXpHandler = False
